# gortex

./: .gitignore  .golangci.yaml  .goreleaser.yml  .gortex.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  go.work
.github/: PULL_REQUEST_TEMPLATE.md
.grace/: DevelopmentPlan.md  DevelopmentPlan_L1.1.md  DevelopmentPlan_L3.md  L1.1_business_requirements.md  L1_business_requirements.md  L3_business_requirements.md  L3_test_guide.md
docs/: agents.md  architecture.md  cli.md  features.md  gortex-deck-with-ua.html  (+18 more)
eval/: README.md  __init__.py  augmentation.py  config.py  prompts.py  pyproject.toml  results.py  run_eval.py
eval/agents/: __init__.py  gortex_agent.py
eval/analysis/: __init__.py  analyze_results.py
eval/bridge/: __init__.py  gortex-augment  gortex-impact  gortex-overview  gortex-search  gortex-usages
eval/configs/models/: claude-haiku.yaml  claude-sonnet.yaml
eval/configs/modes/: baseline.yaml  native.yaml  native_augment.yaml
eval/environments/: __init__.py  gortex_docker.py
eval/prompts/: instance_baseline.jinja  instance_native.jinja  instance_native_augment.jinja  system_native.jinja  system_native_augment.jinja
eval/tests/: __init__.py  test_augmentation_properties.py  test_bridge_properties.py  test_bridge_syntax.py  test_config.py  test_config_properties.py  test_docker_integration.py  test_gortex_docker.py  test_prompts_properties.py  test_results_properties.py  test_runner_properties.py  test_smoke.py
eval/utils/: __init__.py
(+1919 files in other folders)
