[project]
name = "gortex-eval"
version = "0.1.0"
description = "SWE-bench evaluation harness for Gortex code intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.50.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "datasets>=3.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.88.0",
    "pytest>=8.0.0",
]

[project.scripts]
gortex-eval = "run_eval:main"
gortex-eval-analyze = "analysis.analyze_results:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
